<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_icon"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/nothing"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/weeks_action"
                    android:title="@string/weeksLabel"
                    app:showAsAction="never"/>

            <item android:id="@+id/days_action"
                android:title="@string/daysLabel"
                app:showAsAction="never"/>

            <item
                android:id="@+id/tasks_action"
                android:title="@string/tasksWithoutColonLabel"
                app:showAsAction="never"/>

            <item
                android:id="@+id/add_task"
                android:title="@string/addLabel"
                app:showAsAction="never"/>
            <item
                android:id="@+id/main_menu"
                android:title="@string/main_menu"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>